Fix OnDemand link

--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ remote:
   mpirun: "srun"
 
 ondemand:
-  address: "https://ondemand.msu.edu"
+  address: "https://ondemand.hpcc.msu.edu"
   login_tab: "Development Nodes"
   desktop: "Interactive Desktop"
 
